set(target "Network")

add_library(${target} STATIC
	address.cpp
	address.hpp
	client.cpp
	client.hpp
	clientconnection.cpp
	clientconnection.hpp
	networkpeer.cpp
	networkpeer.hpp
	packet.cpp
	packet.hpp
	packetall.hpp
	packetbuilder.cpp
	packetbuilder.hpp
	packetconnect.cpp
	packetconnect.hpp
	packetdisconnect.cpp
	packetdisconnect.hpp
	packetplayer.cpp
	packetplayer.hpp
	packetreader.cpp
	packetreader.hpp
	packetterrain.cpp
	packetterrain.hpp
	server.cpp
	server.hpp
	socket.cpp
	socket.hpp
)
target_include_directories(${target}
	PUBLIC
		${CMAKE_CURRENT_LIST_DIR}
)
target_link_libraries(${target}
	PRIVATE
		Util
		$<$<PLATFORM_ID:Windows>:ws2_32>
)
project_dll_export(${target})
