set(target "network")

add_library(${target} STATIC
	address.cpp
	address.hpp
	client.cpp
	client.hpp
	clientconnection.cpp
	clientconnection.hpp
	networkpeer.cpp
	networkpeer.hpp
	packet/packet.cpp
	packet/packet.hpp
	packet/packetall.hpp
	packet/packetbuilder.cpp
	packet/packetbuilder.hpp
	packet/packetconnect.cpp
	packet/packetconnect.hpp
	packet/packetdisconnect.cpp
	packet/packetdisconnect.hpp
	packet/packetplayer.cpp
	packet/packetplayer.hpp
	packet/packetreader.cpp
	packet/packetreader.hpp
	packet/packetterrain.cpp
	packet/packetterrain.hpp
	packet/packetphysicssettings.cpp
	packet/packetphysicssettings.hpp
	server.cpp
	server.hpp
	socket.cpp
	socket.hpp
)
target_include_directories(${target}
	PUBLIC
		${CMAKE_CURRENT_LIST_DIR}
)
target_link_libraries(${target}
	PRIVATE
		util
		gamecore
		$<$<PLATFORM_ID:Windows>:ws2_32>
)
project_dll_export(${target})
